package protocol.protobuf;

option java_package = "protocol.component.protobuf";
option java_outer_classname = "MessageProtos";

message ProtoMessage {

  required int64 id = 1;
  
  enum Command {
  	PING = 1;
  	STORE = 2;
  	FIND_NODE = 3;
  	FIND_VALUE = 4;
  }
  
  required Command command = 2;
  
  enum MessageType {
    REQUEST = 1;
    RESPONSE = 2;
  }
  
  required MessageType type = 3;
  
  required string srcId = 4;
  required string dstId = 5;

  repeated string argument = 6;
  
}
